# choco-treats

./: .gitignore  Dockerfile  README.md
.github/workflows/: release.yml
chomp/: .gitignore  README.md  pyproject.toml
chomp/src/: chomp.txt
chomp/src/chomp/: __init__.py  art.py  cli.py  config.py  download.py  fetch.py  manifest.py  repack.py  term.py
muffin/: .gitignore
muffin/scripts/: get-nuget.sh
scripts/: logs.sh  perms.sh  reload.sh  scan.sh  test.sh
webroot/: index.php  rescan.php  test.php
