[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "chomp"
dynamic = ["version"]
description = "Chocolatey Handler for Offline Package Mirroring & Processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
chomp = "chomp.cli:entry_point"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["chomp*"]

[tool.setuptools_scm]